tests/unit-fail/floatToInt.ref
Error: UB-CCV3
Description: Conversion to integer from float outside the range that can be represented.
Type: Undefined behavior.
See also: C11 sec. 6.3.1.4:1, J.2:1 item 17
  at f(floatToInt.c:6)
  at main(floatToInt.c:10)
  at <file-scope>(<unknown>)
Execution failed (configuration dumped)
